[package]
name = "h_modals"
version = "0.2.6"
authors = ["herald"]
edition = "2021"
description = "A leptos component library using tailwindcss for basic modals."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kodecraft-herald/h-modals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.6.5"